add plot of c_{1,2}(u)

--- a/wmd_files/Selection_Gradients/maclev-2-2-popdyn.sage.out.tex
+++ b/wmd_files/Selection_Gradients/maclev-2-2-popdyn.sage.out.tex
@@ -85,16 +85,32 @@ Invasion condition for $X_{1}$:
 \[R_{0} b_{1} c_{10} + R_{1} b_{1} c_{11} - b_{1} m_{1} > 0 \
 \]
 In our initial model, $c$ values are
-\[c_{00} = \left(\frac{9}{14}\right) \
+\[c_{00} \
+=\
+\frac{9}{14} \
+=\
+0.6429 \
 \]
 
-\[c_{01} = \left(\frac{9}{29}\right) \
+\[c_{01} \
+=\
+\frac{9}{29} \
+=\
+0.3103 \
 \]
 
-\[c_{10} = \left(\frac{81}{161}\right) \
+\[c_{10} \
+=\
+\frac{81}{161} \
+=\
+0.5031 \
 \]
 
-\[c_{11} = \left(\frac{81}{206}\right) \
+\[c_{11} \
+=\
+\frac{81}{206} \
+=\
+0.3932 \
 \]
 
 \end{document}
