bug fix in L-V vectors

--- a/wmd_files/Selection_Gradients/maclev-2-2-c-geom.sage.out.tex
+++ b/wmd_files/Selection_Gradients/maclev-2-2-c-geom.sage.out.tex
@@ -55,7 +55,7 @@
 \]
 
 \[
-  I(u_0) = \left(0,\,0,\,-c_{0_{0}}\left(t\right) D[0]\left(c_{1_{0}}\right)\left(t\right) - c_{0_{1}}\left(t\right) D[0]\left(c_{1_{1}}\right)\left(t\right)\right)
+  I(u_0) = \left(0,\,-c_{0_{0}}\left(t\right) D[0]\left(c_{0_{0}}\right)\left(t\right) - c_{0_{1}}\left(t\right) D[0]\left(c_{0_{1}}\right)\left(t\right),\,-c_{0_{0}}\left(t\right) D[0]\left(c_{1_{0}}\right)\left(t\right) - c_{0_{1}}\left(t\right) D[0]\left(c_{1_{1}}\right)\left(t\right)\right)
 \]
 
 \[
