--- a/wmd_files/Selection_Gradients/maclev-2-2-zngi.sage.out.tex
+++ b/wmd_files/Selection_Gradients/maclev-2-2-zngi.sage.out.tex
@@ -39,5 +39,8 @@ generic ZNGI curve:
 envelope condition:
 \[-\frac{10 \, R_{1} {\left(u - 1\right)}}{{\left(5 \, {\left(u - 1\right)}^{2} + 1\right)}^{2}} - \frac{10 \, R_{0} u}{{\left(5 \, u^{2} + 1\right)}^{2}} = 0 \
 \]
+And the $(R_0,R_1)$ solution of those together is the envelope curve:
+\[\left[\frac{25 \, u^{5} - 25 \, u^{4} + 10 \, u^{3} - 10 \, u^{2} + u - 1}{5 \, u^{2} - 5 \, u - 1}, -\frac{25 \, u^{5} - 100 \, u^{4} + 160 \, u^{3} - 120 \, u^{2} + 36 \, u}{5 \, u^{2} - 5 \, u - 1}\right] \
+\]
 
 \end{document}
