--- a/_assets/latex-header-additions.tex
+++ b/_assets/latex-header-additions.tex
@@ -1,3 +1,4 @@
+\usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 \usepackage{amsthm}
 \usepackage{mathtools} % dcases
 \usepackage{graphicx}
